--- a/itis3135/BYOintro.html
+++ b/itis3135/BYOintro.html
@@ -5,6 +5,31 @@
   <title>BYO Introduction</title>
   <link rel="stylesheet" href="styles/default.css" />
   <script src="scripts/survey.js" defer></script>
+  <style>
+    form {
+      width: 60%;
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      gap: 1em;
+    }
+    label {
+      display: block;
+      margin-bottom: 0.5em;
+    }
+    input[type="text"],
+    input[type="file"] {
+      width: 100%;
+      padding: 0.4em;
+    }
+    fieldset {
+      border: 1px solid #333;
+      padding: 1em;
+    }
+    .course {
+      margin-bottom: 1em;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -34,7 +59,7 @@
         <label>First Name: <input type="text" name="firstName" required /></label>
         <label>Middle Initial: <input type="text" name="middleInit" required /></label>
         <label>Last Name: <input type="text" name="lastName" required /></label>
-        <label>Nickname: <input type="text" name="nickname" placeholder="e.g. Killer Queen" required /></label>
+        <label>Nickname: <input type="text" name="nickname" required /></label>
         <label>Mascot: <input type="text" name="mascot" required /></label>
       </fieldset>
 
@@ -58,9 +83,9 @@
         <legend>Courses I'm Taking & Why</legend>
         <div id="courses">
           <div class="course">
-            <input type="text" name="course[]" placeholder="Course Code" required />
-            <input type="text" name="courseDesc[]" placeholder="Course Description" required />
-            <input type="text" name="courseType[]" placeholder="Reason" required />
+            <label>Course Code: <input type="text" name="course[]" required /></label>
+            <label>Description: <input type="text" name="courseDesc[]" required /></label>
+            <label>Reason: <input type="text" name="courseType[]" required /></label>
             <button type="button" onclick="removeCourse(this)">Delete Course</button>
           </div>
         </div>
@@ -81,7 +106,7 @@
         </label>
       </fieldset>
 
-      <div style="margin-top: 20px;">
+      <div style="text-align: center;">
         <input type="submit" value="Submit" />
         <input type="reset" value="Reset" />
       </div>
