--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -35,6 +35,7 @@
       <li><a href="https://webpages.charlotte.edu/cyun2/stuff/free%5EVBucks%5EHere.htm">CRAPPY Website</a></li>
       <li><a href="website_evaluations.html">Website Evaluation</a></li>
       <li><a href="tables.html">HTML Tables</a></li>
+      <li><a href="BYOintro.html">BYO Intro</a></li>
     </ul>
   </nav>
 
