--- a/itis3135/BYOintro.html
+++ b/itis3135/BYOintro.html
@@ -45,7 +45,7 @@
       <li><a href="https://webpages.charlotte.edu/cyun2/stuff/free%5EVBucks%5EHere.htm">CRAPPY Website</a></li>
       <li><a href="website_evaluations.html">Website Evaluation</a></li>
       <li><a href="tables.html">HTML Tables</a></li>
-      <li><a href="byo_intro.html">BYO Intro</a></li>
+      <li><a href="BYOintro.html">BYO Intro</a></li>
     </ul>
   </nav>
 
