--- a/itis3135/BYOintro.html
+++ b/itis3135/BYOintro.html
@@ -46,6 +46,7 @@
       <li><a href="website_evaluations.html">Website Evaluation</a></li>
       <li><a href="tables.html">HTML Tables</a></li>
       <li><a href="BYOintro.html">BYO Intro</a></li>
+      <li><a href="slideshow.html">Slideshow</a></li>
     </ul>
   </nav>
 
