--- a/itis3135/comonents/header.html
+++ b/itis3135/comonents/header.html
@@ -12,6 +12,7 @@
       <li><a href="website_evaluations.html">Website Evaluation</a></li>
       <li><a href="https://webpages.charlotte.edu/cyun2/itis3135/tables.html">HTML Tables</a></li>
       <li><a href="BYOintro.html">BYO Intro</a></li>
+      <li><a href="slideshow.html">Slideshow</a></li>
     </ul>
   </nav>
   
