--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -22,6 +22,7 @@
       <li><a href="https://webpages.charlotte.edu/cyun2/itis3135/website_evaluations.html">Website Evaluation</a></li>
       <li><a href="https://webpages.charlotte.edu/cyun2/itis3135/tables.html">HTML Tables</a></li>
       <li><a href="BYOintro.html">BYO Intro</a></li>
+      <li><a href="slideshow.html">Slideshow</a></li>
     </ul>
   </nav>
   
