--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -107,7 +107,7 @@
     <section>
       <h3>Notes</h3>
       <ul>
-        <li>All images were AI-generated using Bing Image Creator</li>
+        <li>All images were from Google images</li>
         <li>No external help received; completed independently</li>
         <li>This is entirely my own work and does not copy any other student's code</li>
       </ul>
