--- a/itis3135/BYOintro.html
+++ b/itis3135/BYOintro.html
@@ -47,6 +47,7 @@
       <li><a href="tables.html">HTML Tables</a></li>
       <li><a href="BYOintro.html">BYO Intro</a></li>
       <li><a href="slideshow.html">Slideshow</a></li>
+      <li><a href="drawing.html">Drawing</a></li>
     </ul>
   </nav>
 
