--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -23,6 +23,7 @@
       <li><a href="https://webpages.charlotte.edu/cyun2/itis3135/tables.html">HTML Tables</a></li>
       <li><a href="BYOintro.html">BYO Intro</a></li>
       <li><a href="slideshow.html">Slideshow</a></li>
+      <li><a href="drawing.html">Drawing</a></li>
     </ul>
   </nav>
 
