--- a/itis3135/project_overview.html
+++ b/itis3135/project_overview.html
@@ -2,83 +2,80 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Project Overview - UNCC Boxing Club Web App</title>
+  <title>Project Overview - Charlotte Boxing Club Web App</title>
   <link rel="stylesheet" href="styles/default.css">
+  <script src="scripts/HTMLInclude.js"></script>
 </head>
 <body>
 
   <header>
-    <h1>Bobby Yun’s Ballsy Yeti ITIS3135</h1>
+    <h1>Charlotte Boxing Club Web App</h1>
   </header>
 
   <nav>
     <ul>
-      <li><a href="index.html">Home</a></li>
+      <li><a href="https://webpages.charlotte.edu/cyun2/">Home</a></li>
       <li><a href="introduction.html">Introduction</a></li>
       <li><a href="contract.html">Contract</a></li>
+      <li><a href="https://webpages.charlotte.edu/cyun2/ballsyyeti/">Whimsical Company</a></li>
       <li><a href="website_evaluations.html">Website Evaluation</a></li>
       <li><a href="tables.html">HTML Tables</a></li>
       <li><a href="BYOintro.html">BYO Intro</a></li>
-      <li><a href="drawing.html">P5 Drawing</a></li>
+      <li><a href="drawing.html">p5.js Drawing</a></li>
       <li><a href="slideshow.html">Slideshow</a></li>
       <li><a href="project_overview.html">Project Overview</a></li>
     </ul>
   </nav>
 
   <main>
-    <h2>Project Overview - UNCC Boxing Club Web App</h2>
+    <h2 style="text-align: center;">Project Overview – Charlotte Boxing Club Web App</h2>
 
-    <h3>1. Project Overview</h3>
-    <ul>
-      <li><strong>Purpose:</strong> To create an interactive and informative website for the UNCC Boxing Club, streamlining communications and recruitment.</li>
-      <li><strong>Intended Users:</strong> UNCC students interested in joining or learning about the boxing club, alumni, and potential event attendees.</li>
-      <li><strong>Content:</strong> Club information, training schedules, leadership bios, event announcements, and sign-up forms.</li>
-    </ul>
+    <ol style="text-align: center;">
+      <li><strong>Project Overview</strong>
+        <ul style="list-style: none;">
+          <li><strong>Purpose:</strong> To create an interactive and informative website for the Charlotte Boxing Club, streamlining communications and recruitment.</li>
+          <li><strong>Intended Users:</strong> Current UNCC students.</li>
+          <li><strong>Content:</strong> Club information, training schedules, leadership bios, event announcements, and sign-up forms.</li>
+        </ul>
+      </li>
 
-    <h3>2. Client Information</h3>
-    <ul>
-      <li><strong>Name:</strong> [Redacted for privacy]</li>
-      <li><strong>Organization:</strong> UNCC Boxing Club</li>
-      <li><strong>Email:</strong> [Redacted]</li>
-      <li><strong>Phone:</strong> [Optional]</li>
-    </ul>
+      <li><strong>Client Information</strong>
+        <ul style="list-style: none;">
+          <li><strong>Name:</strong> Charlotte Boxing Club</li>
+          <li><strong>Organization:</strong> Charlotte Boxing Club</li>
+          <li><strong>Email:</strong> CharlotteBoxing@Charlotte.edu</li>
+          <li><strong>Phone:</strong> 555-555-5555</li>
+        </ul>
+      </li>
 
-    <h3>3. Wireframe</h3>
-    <figure>
-      <img src="images/wireframe.png" alt="Homepage wireframe for Boxing Club">
-      <figcaption>Homepage wireframe - layout includes navbar, hero image, schedule grid, and footer.</figcaption>
-    </figure>
+      <li><strong>Wireframe</strong>
+        <figure style="text-align: center;">
+          <img src="images/wireframe.png" alt="Homepage wireframe for Boxing Club" width="600">
+          <figcaption>Homepage wireframe - layout includes navbar, hero image, schedule grid, and footer.</figcaption>
+        </figure>
+      </li>
 
-    <h3>4. Site Map</h3>
-    <figure>
-      <img src="images/sitemap.png" alt="Site map for Boxing Club site">
-      <figcaption>Site Map - Five interconnected pages accessible via the navigation bar.</figcaption>
-    </figure>
+      <li><strong>Site Map</strong>
+        <figure style="text-align: center;">
+          <img src="images/sitemap.png" alt="Site map for Boxing Club site" width="600">
+          <figcaption>Site Map – Five interconnected pages accessible via the navigation bar.</figcaption>
+        </figure>
+        <ul style="text-align: center; list-style-position: inside;">
+          <li>Home</li>
+          <li>Sign Up</li>
+          <li>Schedule</li>
+          <li>Leadership</li>
+          <li>Equipment (Hand Wraps, Boxing Gloves, Mouth Guard, Head Gear, Boxing Shoes)</li>
+        </ul>
+      </li>
 
-    <h3>5. Website Pages</h3>
-    <ol>
-      <li><strong>Home:</strong> Introduces the club and links to all other pages. Audience: new visitors.</li>
-      <li><strong>Schedule:</strong> Shows training times and locations. Includes interactive calendar. No form input.</li>
-      <li><strong>Leadership:</strong> Bios and photos of club leaders. Interactive hover reveal feature.</li>
-      <li><strong>Events:</strong> Upcoming matches and volunteer opportunities. Includes RSVP form.</li>
-      <li><strong>Join Us:</strong> Sign-up form for new members. Includes validation and confirmation popup.</li>
+      <li><strong>Notes & Signature</strong>
+        <ul style="list-style: none;">
+          <li><strong>Statement:</strong> I affirm this is my original work. No one else’s code was copied or pasted.</li>
+          <li><strong>Signed:</strong> Bobby Yun, 04/30/2025 2:05AM</li>
+        </ul>
+      </li>
     </ol>
-
-    <h3>6. Dynamic Functionality</h3>
-    <ul>
-      <li><strong>JavaScript:</strong> Form validation and confirmation dialogs.</li>
-      <li><strong>jQuery:</strong> Carousel for homepage testimonials and event sliders.</li>
-      <li><strong>Gallery/Interactivity:</strong> Hover effects, collapsible schedules, RSVP form.</li>
-      <li><strong>Inspiration:</strong> Inspired by pages like <a href="https://www.joinfightcamp.com/">JoinFightCamp</a> and UNCC club sports sites.</li>
-    </ul>
-
-    <h3>7. Notes & Signature</h3>
-    <ul>
-      <li><strong>Help Received:</strong> Instructor slides, ChatGPT for boilerplate structure, no code copied.</li>
-      <li><strong>Challenges:</strong> Planning a professional layout and simplifying JS interactivity.</li>
-      <li><strong>Statement:</strong> I affirm this is my original work. No one else's code was copied or pasted.</li>
-      <li><strong>Signed:</strong> Bobby Yun, 04/30/2025 2:05AM</li>
-    </ul>
   </main>
 
   <footer>
