--- a/itis3135/project_overview.html
+++ b/itis3135/project_overview.html
@@ -4,7 +4,49 @@
   <meta charset="UTF-8">
   <title>Project Overview - Charlotte Boxing Club Web App</title>
   <link rel="stylesheet" href="styles/default.css">
-  <script src="scripts/HTMLInclude.js"></script>
+  <style>
+    body {
+      background-color: #005035;
+      color: #ffffff;
+      font-family: Arial, sans-serif;
+    }
+    ol {
+      list-style-position: inside;
+      padding-left: 0;
+    }
+    li {
+      text-align: center;
+      margin-bottom: 1.5rem;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+    ul li {
+      margin-bottom: 0.5rem;
+    }
+    figure {
+      text-align: center;
+    }
+    figcaption {
+      margin-top: 0.5rem;
+    }
+    header, footer {
+      text-align: center;
+    }
+    nav ul {
+      list-style-type: none;
+      padding: 0;
+      text-align: center;
+    }
+    nav ul li {
+      display: inline-block;
+      margin: 0 10px;
+    }
+    a {
+      color: #90ee90;
+    }
+  </style>
 </head>
 <body>
 
@@ -30,9 +72,9 @@
   <main>
     <h2 style="text-align: center;">Project Overview – Charlotte Boxing Club Web App</h2>
 
-    <ol style="text-align: center;">
+    <ol>
       <li><strong>Project Overview</strong>
-        <ul style="list-style: none;">
+        <ul>
           <li><strong>Purpose:</strong> To create an interactive and informative website for the Charlotte Boxing Club, streamlining communications and recruitment.</li>
           <li><strong>Intended Users:</strong> Current UNCC students.</li>
           <li><strong>Content:</strong> Club information, training schedules, leadership bios, event announcements, and sign-up forms.</li>
@@ -40,7 +82,7 @@
       </li>
 
       <li><strong>Client Information</strong>
-        <ul style="list-style: none;">
+        <ul>
           <li><strong>Name:</strong> Charlotte Boxing Club</li>
           <li><strong>Organization:</strong> Charlotte Boxing Club</li>
           <li><strong>Email:</strong> CharlotteBoxing@Charlotte.edu</li>
@@ -49,18 +91,18 @@
       </li>
 
       <li><strong>Wireframe</strong>
-        <figure style="text-align: center;">
+        <figure>
           <img src="images/wireframe.png" alt="Homepage wireframe for Boxing Club" width="600">
           <figcaption>Homepage wireframe - layout includes navbar, hero image, schedule grid, and footer.</figcaption>
         </figure>
       </li>
 
       <li><strong>Site Map</strong>
-        <figure style="text-align: center;">
+        <figure>
           <img src="images/sitemap.png" alt="Site map for Boxing Club site" width="600">
           <figcaption>Site Map – Five interconnected pages accessible via the navigation bar.</figcaption>
         </figure>
-        <ul style="text-align: center; list-style-position: inside;">
+        <ul>
           <li>Home</li>
           <li>Sign Up</li>
           <li>Schedule</li>
@@ -70,7 +112,7 @@
       </li>
 
       <li><strong>Notes & Signature</strong>
-        <ul style="list-style: none;">
+        <ul>
           <li><strong>Statement:</strong> I affirm this is my original work. No one else’s code was copied or pasted.</li>
           <li><strong>Signed:</strong> Bobby Yun, 04/30/2025 2:05AM</li>
         </ul>
