--- a/itis3135/project_overview.html
+++ b/itis3135/project_overview.html
@@ -2,56 +2,48 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Project Overview - Charlotte Boxing Club Web App</title>
+  <title>Project Overview – Charlotte Boxing Club</title>
   <link rel="stylesheet" href="styles/default.css">
   <style>
     body {
       background-color: #005035;
-      color: #ffffff;
+      color: white;
       font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 20px;
     }
-    ol {
+    ol, ul {
       list-style-position: inside;
-      padding-left: 0;
+      margin: 0 auto;
+      padding: 0;
+      display: table;
+      text-align: left;
     }
-    li {
-      text-align: center;
-      margin-bottom: 1.5rem;
+    h1, h2 {
+      margin-top: 1.5em;
     }
-    ul {
+    img {
+      max-width: 400px;
+      height: auto;
+      margin-bottom: 20px;
+    }
+    footer {
+      margin-top: 50px;
+    }
+    footer ul {
+      padding: 0;
       list-style: none;
-      padding: 0;
     }
-    ul li {
-      margin-bottom: 0.5rem;
-    }
-    figure {
-      text-align: center;
-    }
-    figcaption {
-      margin-top: 0.5rem;
-    }
-    header, footer {
-      text-align: center;
-    }
-    nav ul {
-      list-style-type: none;
-      padding: 0;
-      text-align: center;
-    }
-    nav ul li {
-      display: inline-block;
+    footer ul li {
+      display: inline;
       margin: 0 10px;
-    }
-    a {
-      color: #90ee90;
     }
   </style>
 </head>
 <body>
 
   <header>
-    <h1>Charlotte Boxing Club Web App</h1>
+    <h1>Bobby Yun’s Ballsy Yeti ITIS3135</h1>
   </header>
 
   <nav>
@@ -60,64 +52,55 @@
       <li><a href="introduction.html">Introduction</a></li>
       <li><a href="contract.html">Contract</a></li>
       <li><a href="https://webpages.charlotte.edu/cyun2/ballsyyeti/">Whimsical Company</a></li>
+      <li><a href="https://webpages.charlotte.edu/cyun2/stuff/free%5EVBucks%5EHere.htm">CRAPPY Website</a></li>
       <li><a href="website_evaluations.html">Website Evaluation</a></li>
-      <li><a href="tables.html">HTML Tables</a></li>
+      <li><a href="https://webpages.charlotte.edu/cyun2/itis3135/tables.html">HTML Tables</a></li>
       <li><a href="BYOintro.html">BYO Intro</a></li>
-      <li><a href="drawing.html">p5.js Drawing</a></li>
-      <li><a href="slideshow.html">Slideshow</a></li>
-      <li><a href="project_overview.html">Project Overview</a></li>
     </ul>
   </nav>
 
   <main>
-    <h2 style="text-align: center;">Project Overview – Charlotte Boxing Club Web App</h2>
+    <img src="images/boxing.jpg" alt="Charlotte Boxing Club image">
 
+    <h2>1. Project Overview</h2>
+    <ul>
+      <li><strong>Purpose:</strong> To create an interactive and informative website for the Charlotte Boxing Club, streamlining communications and recruitment.</li>
+      <li><strong>Intended Users:</strong> Current UNCC students only</li>
+      <li><strong>Content:</strong> Club information, training schedules, leadership bios, event announcements, and sign-up forms.</li>
+    </ul>
+
+    <h2>2. Client Information</h2>
+    <ul>
+      <li><strong>Name:</strong> Charlotte Boxing Club</li>
+      <li><strong>Organization:</strong> Charlotte Boxing Club</li>
+      <li><strong>Email:</strong> CharlotteBoxing@Charlotte.edu</li>
+      <li><strong>Phone:</strong> 555-555-5555</li>
+    </ul>
+
+    <h2>3. Wireframe</h2>
+    <figure>
+      <img src="images/wireframe.png" alt="Homepage wireframe for Charlotte Boxing Club">
+      <figcaption>Homepage wireframe – layout includes navbar, hero image, schedule grid, and footer.</figcaption>
+    </figure>
+
+    <h2>4. Site Map</h2>
+    <figure>
+      <img src="images/sitemap.png" alt="Site map for Charlotte Boxing Club">
+      <figcaption>Site Map – Five interconnected pages accessible via the navigation bar.</figcaption>
+    </figure>
+
+    <h2>5. Website Pages</h2>
     <ol>
-      <li><strong>Project Overview</strong>
-        <ul>
-          <li><strong>Purpose:</strong> To create an interactive and informative website for the Charlotte Boxing Club, streamlining communications and recruitment.</li>
-          <li><strong>Intended Users:</strong> Current UNCC students.</li>
-          <li><strong>Content:</strong> Club information, training schedules, leadership bios, event announcements, and sign-up forms.</li>
-        </ul>
-      </li>
-
-      <li><strong>Client Information</strong>
-        <ul>
-          <li><strong>Name:</strong> Charlotte Boxing Club</li>
-          <li><strong>Organization:</strong> Charlotte Boxing Club</li>
-          <li><strong>Email:</strong> CharlotteBoxing@Charlotte.edu</li>
-          <li><strong>Phone:</strong> 555-555-5555</li>
-        </ul>
-      </li>
-
-      <li><strong>Wireframe</strong>
-        <figure>
-          <img src="images/wireframe.png" alt="Homepage wireframe for Boxing Club" width="600">
-          <figcaption>Homepage wireframe - layout includes navbar, hero image, schedule grid, and footer.</figcaption>
-        </figure>
-      </li>
-
-      <li><strong>Site Map</strong>
-        <figure>
-          <img src="images/sitemap.png" alt="Site map for Boxing Club site" width="600">
-          <figcaption>Site Map – Five interconnected pages accessible via the navigation bar.</figcaption>
-        </figure>
-        <ul>
-          <li>Home</li>
-          <li>Sign Up</li>
-          <li>Schedule</li>
-          <li>Leadership</li>
-          <li>Equipment (Hand Wraps, Boxing Gloves, Mouth Guard, Head Gear, Boxing Shoes)</li>
-        </ul>
-      </li>
-
-      <li><strong>Notes & Signature</strong>
-        <ul>
-          <li><strong>Statement:</strong> I affirm this is my original work. No one else’s code was copied or pasted.</li>
-          <li><strong>Signed:</strong> Bobby Yun, 04/30/2025 2:05AM</li>
-        </ul>
-      </li>
+      <li><strong>Home:</strong> Introduces the club and links to all other pages. Audience: new visitors.</li>
+      <li><strong>Schedule:</strong> Shows training times and locations. Interactive calendar. No form input.</li>
+      <li><strong>Leadership:</strong> Bios and photos of club leaders. Interactive hover reveal feature.</li>
+      <li><strong>Equipment:</strong> Displays hand wraps, boxing gloves, mouth guard, head gear, and shoes.</li>
+      <li><strong>Sign Up:</strong> Form for new members. Includes validation and confirmation popup.</li>
     </ol>
+
+    <h2>6. Notes & Signature</h2>
+    <p><strong>Statement:</strong> I affirm this is my original work. No one else's code was copied or pasted.</p>
+    <p><strong>Signed:</strong> Bobby Yun, 04/30/2025 2:05AM</p>
   </main>
 
   <footer>
