--- a/itis3135/project_overview.html
+++ b/itis3135/project_overview.html
@@ -1,121 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Project Overview – Charlotte Boxing Club</title>
-  <link rel="stylesheet" href="styles/default.css">
+  <meta charset="UTF-8" />
+  <title>Project Overview – Charlotte Boxing Club Web App</title>
+  <link rel="stylesheet" href="styles/default.css" />
   <style>
     body {
       background-color: #005035;
       color: white;
-      font-family: Arial, sans-serif;
+      font-family: monospace;
       text-align: center;
       padding: 20px;
     }
-    ol, ul {
-      list-style-position: inside;
-      margin: 0 auto;
-      padding: 0;
-      display: table;
-      text-align: left;
-    }
-    h1, h2 {
-      margin-top: 1.5em;
-    }
     img {
-      max-width: 400px;
+      max-width: 100%;
       height: auto;
-      margin-bottom: 20px;
     }
-    footer {
-      margin-top: 50px;
-    }
-    footer ul {
-      padding: 0;
-      list-style: none;
-    }
-    footer ul li {
-      display: inline;
-      margin: 0 10px;
+    ol {
+      list-style-position: inside;
+      text-align: center;
     }
   </style>
 </head>
 <body>
 
-  <header>
-    <h1>Bobby Yun’s Ballsy Yeti ITIS3135</h1>
-  </header>
+  <img src="images/boxing.jpg" alt="Boxing Image" />
 
-  <nav>
-    <ul>
-      <li><a href="https://webpages.charlotte.edu/cyun2/">Home</a></li>
-      <li><a href="introduction.html">Introduction</a></li>
-      <li><a href="contract.html">Contract</a></li>
-      <li><a href="https://webpages.charlotte.edu/cyun2/ballsyyeti/">Whimsical Company</a></li>
-      <li><a href="https://webpages.charlotte.edu/cyun2/stuff/free%5EVBucks%5EHere.htm">CRAPPY Website</a></li>
-      <li><a href="website_evaluations.html">Website Evaluation</a></li>
-      <li><a href="https://webpages.charlotte.edu/cyun2/itis3135/tables.html">HTML Tables</a></li>
-      <li><a href="BYOintro.html">BYO Intro</a></li>
-    </ul>
-  </nav>
+  <h2>Project Overview – Charlotte Boxing Club Web App</h2>
 
-  <main>
-    <img src="images/boxing.jpg" alt="Charlotte Boxing Club image">
+  <h3>1. Project Overview</h3>
+  <ul>
+    <li><strong>Purpose:</strong> To create an interactive and informative website for the Charlotte Boxing Club, streamlining communications and recruitment.</li>
+    <li><strong>Intended Users:</strong> Current UNCC students.</li>
+    <li><strong>Content:</strong> Club information, training schedules, leadership bios, equipment resources, and a signup form.</li>
+  </ul>
 
-    <h2>1. Project Overview</h2>
-    <ul>
-      <li><strong>Purpose:</strong> To create an interactive and informative website for the Charlotte Boxing Club, streamlining communications and recruitment.</li>
-      <li><strong>Intended Users:</strong> Current UNCC students only</li>
-      <li><strong>Content:</strong> Club information, training schedules, leadership bios, event announcements, and sign-up forms.</li>
-    </ul>
+  <h3>2. Client Information</h3>
+  <ul>
+    <li><strong>Name:</strong> Charlotte Boxing Club</li>
+    <li><strong>Organization:</strong> Charlotte Boxing Club</li>
+    <li><strong>Email:</strong> CharlotteBoxing@Charlotte.edu</li>
+    <li><strong>Phone:</strong> 555-555-5555</li>
+  </ul>
 
-    <h2>2. Client Information</h2>
-    <ul>
-      <li><strong>Name:</strong> Charlotte Boxing Club</li>
-      <li><strong>Organization:</strong> Charlotte Boxing Club</li>
-      <li><strong>Email:</strong> CharlotteBoxing@Charlotte.edu</li>
-      <li><strong>Phone:</strong> 555-555-5555</li>
-    </ul>
+  <h3>3. Wireframe</h3>
+  <img src="images/wireframe.jpg" alt="Homepage wireframe for Charlotte Boxing Club" />
+  <p>Homepage wireframe – Layout includes navigation bar, centered logo and title, login button, and hero image with welcome message overlayed.</p>
 
-    <h2>3. Wireframe</h2>
-    <figure>
-      <img src="images/wireframe.png" alt="Homepage wireframe for Charlotte Boxing Club">
-      <figcaption>Homepage wireframe – layout includes navbar, hero image, schedule grid, and footer.</figcaption>
-    </figure>
+  <h3>4. Site Map</h3>
+  <img src="images/sitemap.jpg" alt="Site map for Charlotte Boxing Club" />
+  <p>Site Map – Six interconnected pages accessible via the navigation bar, each page leads to informational or interactive content.</p>
 
-    <h2>4. Site Map</h2>
-    <figure>
-      <img src="images/sitemap.png" alt="Site map for Charlotte Boxing Club">
-      <figcaption>Site Map – Five interconnected pages accessible via the navigation bar.</figcaption>
-    </figure>
+  <h3>5. Website Pages</h3>
+  <ol>
+    <li><strong>Home:</strong> Reloads the homepage. Contains hero image and welcome message.</li>
+    <li><strong>About:</strong> Informative page about club history, mission, and vision.</li>
+    <li><strong>Schedule:</strong> Displays training schedules and event times in an organized format.</li>
+    <li><strong>Leadership:</strong> Lists bios and contact information of club leadership.</li>
+    <li><strong>Equipment:</strong> Provides a list of required equipment with external resource links (e.g., gloves, mouthguard).</li>
+    <li><strong>Signup:</strong> Contains a form for new members to register with validation.</li>
+  </ol>
 
-    <h2>5. Website Pages</h2>
-    <ol>
-      <li><strong>Home:</strong> Introduces the club and links to all other pages. Audience: new visitors.</li>
-      <li><strong>Schedule:</strong> Shows training times and locations. Interactive calendar. No form input.</li>
-      <li><strong>Leadership:</strong> Bios and photos of club leaders. Interactive hover reveal feature.</li>
-      <li><strong>Equipment:</strong> Displays hand wraps, boxing gloves, mouth guard, head gear, and shoes.</li>
-      <li><strong>Sign Up:</strong> Form for new members. Includes validation and confirmation popup.</li>
-    </ol>
-
-    <h2>6. Notes & Signature</h2>
-    <p><strong>Statement:</strong> I affirm this is my original work. No one else's code was copied or pasted.</p>
-    <p><strong>Signed:</strong> Bobby Yun, 04/30/2025 2:05AM</p>
-  </main>
-
-  <footer>
-    <ul>
-      <li><a href="https://webpages.charlotte.edu/cyun2/">CLT Web</a></li>
-      <li><a href="https://github.com/hungry-bobby">GitHub</a></li>
-      <li><a href="https://www.linkedin.com/in/bobby-yun/">LinkedIn</a></li>
-    </ul>
-    <p>&copy; 2025 <a href="https://webpages.charlotte.edu/cyun2/bobbybuiltit.co/" target="_blank" rel="noopener noreferrer">BobbyBuiltIt.co</a></p>
-    <p><em>“Built By Bobby.”</em></p>
-    <p>
-      <a id="validation_link_html">HTML Validation</a> |
-      <a id="validation_link_css">CSS Validation</a>
-    </p>
-  </footer>
+  <h3>6. Notes & Signature</h3>
+  <ul>
+    <li><strong>Statement:</strong> I affirm this is my original work. No one else’s code was copied or pasted.</li>
+    <li><strong>Signed:</strong> Bobby Yun, 04/30/2025 2:05AM</li>
+  </ul>
 
 </body>
 </html>
