--- a/itis3135/project_overview.html
+++ b/itis3135/project_overview.html
@@ -12,6 +12,17 @@
       text-align: center;
       padding: 20px;
     }
+    header, footer {
+      padding: 10px;
+    }
+    nav ul, footer ul {
+      list-style-type: none;
+      padding: 0;
+    }
+    nav ul li, footer ul li {
+      display: inline;
+      margin-right: 15px;
+    }
     img {
       max-width: 100%;
       height: auto;
@@ -23,6 +34,25 @@
   </style>
 </head>
 <body>
+
+  <header>
+    <h1>Bobby Yun’s Ballsy Yeti ITIS3135</h1>
+  </header>
+  
+  <nav>
+    <ul>
+      <li><a href="https://webpages.charlotte.edu/cyun2/">Home</a></li>
+      <li><a href="introduction.html">Introduction</a></li>
+      <li><a href="contract.html">Contract</a></li>
+      <li><a href="https://webpages.charlotte.edu/cyun2/ballsyyeti/">Whimsical Company</a></li>
+      <li><a href="https://webpages.charlotte.edu/cyun2/stuff/free%5EVBucks%5EHere.htm">CRAPPY Website</a></li>
+      <li><a href="website_evaluations.html">Website Evaluation</a></li>
+      <li><a href="https://webpages.charlotte.edu/cyun2/itis3135/tables.html">HTML Tables</a></li>
+      <li><a href="BYOintro.html">BYO Intro</a></li>
+      <li><a href="slideshow.html">Slideshow</a></li>
+      <li><a href="drawing.html">Drawing</a></li>
+    </ul>
+  </nav>
 
   <img src="images/boxing.jpg" alt="Boxing Image" />
 
@@ -66,6 +96,20 @@
     <li><strong>Statement:</strong> I affirm this is my original work. No one else’s code was copied or pasted.</li>
     <li><strong>Signed:</strong> Bobby Yun, 04/30/2025 2:05AM</li>
   </ul>
+
+  <footer>
+    <ul>
+      <li><a href="https://webpages.charlotte.edu/cyun2/">CLT Web</a></li>
+      <li><a href="https://github.com/hungry-bobby">GitHub</a></li>
+      <li><a href="https://www.linkedin.com/in/bobby-yun/">LinkedIn</a></li>
+    </ul>
+    <p>&copy; 2025 <a href="https://webpages.charlotte.edu/cyun2/bobbybuiltit.co/" target="_blank" rel="noopener noreferrer">BobbyBuiltIt.co</a></p>
+    <p><em>“Built By Bobby.”</em></p>
+    <p>
+      <a id="validation_link_html">HTML Validation</a> |
+      <a id="validation_link_css">CSS Validation</a>
+    </p>
+  </footer>
 
 </body>
 </html>
